# LazyPkg

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/cheatsheet/: help.rs  mod.rs  tldr.rs
src/managers/: cargo.rs  dnf.rs  mod.rs  npm.rs  pip.rs  pipx.rs  pnpm.rs
src/snapshot/: export.rs  import.rs  mod.rs
src/ui/: cheatsheet.rs  confirm.rs  layout.rs  managers.rs  mod.rs  search.rs  theme.rs  tools.rs
